force-app/main/default/objects/C3C_QueueProcessingItem__c/C3C_QueueProcessingItem__c.object-meta.xml
<CustomObject>
    <label>Item da Fila de Processamento</label>
    <nameField>
        <label>Nome de Item da Fila de Processamento</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Itens da Fila de Processamento</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>