force-app/main/default/objects/C3C_QueueProcessingItem__c/fields/Body__c.field-meta.xml
<CustomField>
    <fullName>Body__c</fullName>
    <label>Corpo</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>