force-app/main/default/objects/C3C_QueueProcessingItem__c/fields/IntervalMinutes__c.field-meta.xml
<CustomField>
    <fullName>IntervalMinutes__c</fullName>
    <label>Intervalo em minutos</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>