force-app/main/default/objects/C3C_QueueProcessingItem__c/fields/QueueProcessingBatchExternalId__c.field-meta.xml
<CustomField>
    <fullName>QueueProcessingBatchExternalId__c</fullName>
    <label>Id externo do lote de processamento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>