force-app/main/default/objects/C3C_QueueProcessingItem__c/fields/QueueProcessingBatchId__c.field-meta.xml
<CustomField>
    <fullName>QueueProcessingBatchId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lote da Fila de Processamento</label>
    <referenceTo>C3C_QueueProcessingBatch__c</referenceTo>
    <relationshipLabel>Itens da Fila de Processamento</relationshipLabel>
    <relationshipName>QueueProcessingItens</relationshipName>
    <type>Lookup</type>
</CustomField>