force-app/main/default/objects/C3C_QueueProcessingItem__c/fields/ScheduledDatetime__c.field-meta.xml
<CustomField>
    <fullName>ScheduledDatetime__c</fullName>
    <label>Data/hora agendamento</label>
    <type>DateTime</type>
</CustomField>