force-app/main/default/objects/C3C_QueueProcessingItem__c/fields/ScheduledExpression__c.field-meta.xml
<CustomField>
    <fullName>ScheduledExpression__c</fullName>
    <description>Minutes Hours DayMonth Month DayWeek Year</description>
    <label>Expressão de agendamento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>