force-app/main/default/objects/C3C_QueueProcessingItem__c/recordTypes/Async.recordType-meta.xml
<RecordType>
    <fullName>Async</fullName>
    <active>true</active>
    <label>Assincrono</label>
</RecordType>