force-app/main/default/objects/C3C_QueueProcessingItem__c/recordTypes/AsyncScheduled.recordType-meta.xml
<RecordType>
    <fullName>AsyncScheduled</fullName>
    <active>true</active>
    <label>Assíncrono Agendado</label>
</RecordType>