force-app/main/default/objects/C3C_QueueProcessingItem__c/recordTypes/AsyncTimeout.recordType-meta.xml
<RecordType>
    <fullName>AsyncTimeout</fullName>
    <active>true</active>
    <label>Deslocamento Assíncrono</label>
</RecordType>