force-app/main/default/objects/C3C_QueueProcessingItem__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ServiceName__c</columns>
    <columns>Status__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>ScheduledDatetime__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>